k8s/preprod/deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: businesscard
  name: businesscard
spec:
  replicas: 1
  selector:
    app: businesscard
    deploymentconfig: businesscard
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        cpu: 1000m
        memory: 500M
      requests:
        cpu: 1000m
        memory: 500M
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: businesscard
        deploymentconfig: businesscard
    spec:
      containers:
        - env:
            - name: TEQUILA_HOST
              valueFrom:
                configMapKeyRef:
                  key: TEQUILA_HOST
                  name: config
            - name: MOCK_ORACLE
              valueFrom:
                configMapKeyRef:
                  key: MOCK_ORACLE
                  name: config
            - name: SITE_URL
              valueFrom:
                configMapKeyRef:
                  key: SITE_URL
                  name: config
            - name: E2EM_LINE
              valueFrom:
                configMapKeyRef:
                  key: E2EM_LINE
                  name: config
          image: >-
            docker-registry.default.svc:5000/businesscard-preprod/businesscard:develop
          imagePullPolicy: Always
          name: businesscard
          resources:
            limits:
              cpu: 1000m
              memory: 500M
            requests:
              cpu: 1000m
              memory: 500M
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/dinfo/etc
              name: volume-7s8dg
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: config
          name: volume-7s8dg
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - businesscard
        from:
          kind: ImageStreamTag
          name: 'businesscard:develop'
          namespace: businesscard-preprod
      type: ImageChange
    - type: ConfigChange
