k8s/preprod/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: businesscard
  name: businesscard-service
  namespace: businesscard-preprod
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: businesscard
  sessionAffinity: None
  type: ClusterIP
