k8s/preprod/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: businesscard
  name: businesscard-route
  namespace: businesscard-preprod
spec:
  host: businesscard-preprod.epfl.ch
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: businesscard-service
    weight: 100
  wildcardPolicy: None
